--- a/habitation/templates/account/login.html
+++ b/habitation/templates/account/login.html
@@ -1,59 +1,71 @@
-{% extends "account/base.html" %}
+{% load static %}
+{% get_static_prefix as STATIC_PREFIX %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="habitation">
+    <title>Login</title>
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/normalize.css">
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/all.min.css">
+   
+    
+</head>
+<body>
+    <div class="login">
+        <div class="container" >
+            <div class="left-side">
+                <a href="{{ signup_url }}"><button onclick="page('{{ signup_url }}')">Sign Up </button></a>
+                <img src="{{ STATIC_PREFIX }}/images/login.svg" alt="">
+            </div>
+            <div class="right-side">
+                <div class="header">
+                    <h3> Habitation</h3>
+                </div>
+                <div class="content">
+                        <h4>Login</h4>
+                        <form method="POST" action="{% url 'account_login' %}">
+                          {% csrf_token %}
 
-{% load i18n %}
-{% load account socialaccount %}
-{% load crispy_forms_tags %}
+                            <div class="input_box">
+                                <label for="email">E-Mail</label><br>
+                                <input type="email" name="login" placeholder="Your E-Mail" required>
+                                <div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                            </div><br><br> 
 
-{% block head_title %}{% translate "Sign In" %}{% endblock %}
+                            <div class="input_box">
+                                <label for="password">Password</label><br>
+                                <input type="password" name="password" placeholder="Your Password" id="id_password" required>
+                                <div class="icon"><i class="fas fa-key"></i></div>
+                                <span  id="togglePassword"  class="fa fa-fw fa-eye right-icon toggle-password"></span>
+                            </div><br><br>  
+            
+                            <div class=" button-one" >
+                               <button type="submit"> Login</button>
+                            </div>
+                            <div class="end">
+                                    <div class="check-box">
+                                        <input type="checkbox">
+                                        <label class="checkbox">Remember Me</label>
+                                    </div>
+                                       <a href="{% url 'account_reset_password' %}" >Forget Password ?</a>
+                                   
+                                </div>
+                            </div>
+                        </form>
 
-{% block inner %}
+                </div>
 
-<h1>{% translate "Sign In" %}</h1>
+            </div>
+        </div>
+    
 
-{% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-  <p>
-    {% translate "Please sign in with one of your existing third party accounts:" %}
-    {% if ACCOUNT_ALLOW_REGISTRATION %}
-      {% blocktranslate trimmed %}
-        Or, <a href="{{ signup_url }}">sign up</a>
-        for a {{ site_name }} account and sign in below:
-      {% endblocktranslate %}
-    {% endif %}
-  </p>
-
-  <div class="socialaccount_ballot">
-
-    <ul class="socialaccount_providers">
-      {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-    </ul>
-
-    <div class="login-or">{% translate "or" %}</div>
-
-  </div>
-
-  {% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-  {% if ACCOUNT_ALLOW_REGISTRATION %}
-    <p>
-      {% blocktranslate trimmed %}
-        If you have not created an account yet, then please
-        <a href="{{ signup_url }}">sign up</a> first.
-      {% endblocktranslate %}
-    </p>
-  {% endif %}
-{% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% translate "Forgot Password?" %}</a>
-  <button class="primaryAction btn btn-primary" type="submit">{% translate "Sign In" %}</button>
-</form>
-
-{% endblock %}
+    </div>
+    <script src="js/main.js" ></script>
+    
+</body>
+</html>
