another messy commit

--- a/habitation/templates/account/password_reset.html
+++ b/habitation/templates/account/password_reset.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% comment %} {% extends "account/base.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -22,4 +22,63 @@
     </form>
 
     <p>{% blocktranslate %}Please contact us if you have any trouble resetting your password.{% endblocktranslate %}</p>
-{% endblock %}
+{% endblock %} {% endcomment %}
+
+{% load static %}
+{% get_static_prefix as STATIC_PREFIX %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="habitation">
+    <title>Login</title>
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/normalize.css">
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/all.min.css">
+</head>
+<body>
+    <div class="forget-password">
+        <div class="container" >
+            <div class="left-side">
+                <img src="{{STATIC_PREFIX}}/images/14.svg" alt="">
+            </div>
+            <div class="right-side">
+                    <div class="header">
+                        <h3 class="logo"> Habitation</h3>
+                      </div>
+                      <div class="content">
+                                      <h4>Forget Password</h4>
+                                 <div class="paragrap">
+                                       <p>Please enter your username or email address. You Will receive a link to create a new password via email.</p>
+                                  </div>
+                              <form method="POST" action="{% url 'account_reset_password' %}">
+                                {% csrf_token %}
+
+                                  <div class="input_box">
+                                      <label for="email">E-Mail</label><br>
+                                      <input type="email" name="email" placeholder="Your E-Mail" required>
+                                      <div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                                  </div><br><br> 
+                  
+                                  <div class=" button-one" >
+                                      <a href="{{ account_login }}"><button>Back To Login </button></a>
+                                  </div>
+                                  <div class=" button-two" >
+                                      <button type="submit">Get New Password </button>
+                                   </div>
+                  
+                              </form>
+                      </div>      
+                </div>
+
+            </div>
+        </div>
+    
+
+    </div>
+    <script src="{{STATIC_PREFIX}}/js/main.js" ></script>
+</body>
+</html>
