--- a/habitation/templates/account/login.html
+++ b/habitation/templates/account/login.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="habitation">
     <title>Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/normalize.css">
     <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/style.css">
     <!-- font awesome -->
@@ -17,6 +19,13 @@
 </head>
 <body>
     <div class="login">
+        {% if form.errors %}
+            {% for key, value in form.errors.items %}
+                <div class="alert alert-danger" role="alert">
+                {{value.0|escape}} 
+                </div>
+            {% endfor %}
+            {% endif %}
         <div class="container" >
             <div class="left-side">
                 <a href="{{ signup_url }}"><button onclick="page('{{ signup_url }}')">Sign Up </button></a>
@@ -65,7 +74,7 @@
     
 
     </div>
-    <script src="js/main.js" ></script>
+    <script src="{{ STATIC_PREFIX }}/js/main.js" ></script>
     
 </body>
 </html>
