--- a/habitation/templates/account/signup.html
+++ b/habitation/templates/account/signup.html
@@ -1,22 +1,81 @@
-{% extends "account/base.html" %}
+{% load static %}
+{% get_static_prefix as STATIC_PREFIX %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="habitation">
+    <title>Sign Up</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-{% block head_title %}{% translate "Signup" %}{% endblock %}
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/normalize.css">
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="{{ STATIC_PREFIX }}/css/all.min.css">
+   
 
-{% block inner %}
-<h1>{% translate "Sign Up" %}</h1>
 
-<p>{% blocktranslate %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktranslate %}</p>
+</head>
+<body>
+    <div class="Sign Up">
+        <div class="container">
+            {% if form.errors %}
+            {% for key, value in form.errors.items %}
+                <div class="alert alert-danger" role="alert">
+                {{value.0|escape}} 
+                </div>
+            {% endfor %}
+            {% endif %}
+            
+            <div class="left-side">
+                    <a href="{% url 'account_login' %}"><button> Login</button><a> 
+                    <img src="{{ STATIC_PREFIX }}/images/signup.svg" alt=""> 
+            </div>
+            <div class="right-side">
+                <div class="header">
+                    <h3> Habitation</h3>
+                </div>
+                <div class="content">
+                        <h4>Creat Your account</h4>
+                        <form method="post" action="{% url 'account_signup' %}">
+                          {% csrf_token %}
+                            <div class="input_box">
+                                <label for="email">E-Mail</label><br>
+                                <input type="email" name="email" placeholder="Your E-Mail" required>
+                                <div class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                            </div><br><br> 
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button class="btn btn-primary" type="submit">{% translate "Sign Up" %} &raquo;</button>
-</form>
+                            <div class="input_box">
+                                <label for="pass">Password</label><br>
+                                <input type="password" name="password1" id="id_password" placeholder="Your Password" required>
+                                <div class="icon"><i class="fas fa-key"></i></div>
+                                <span  id="togglePassword"  class="fa fa-fw fa-eye right-icon toggle-password"></span>
+                            </div><br><br>  
 
-{% endblock %}
+                            <div class="input_box">
+                                <label for="pass">Verify Password</label>
+                                <input  class="Verify" type="password"  name="password2" placeholder="Verify Password" id="id_password" required>
+                                <div class="icon"><i class="fas fa-key"></i></div>
+                                <span id="togglePassword"  class="fa fa-fw fa-eye right-icon toggle-password"></span>
+                            </div><br><br>
+            
+                            <div class=" button-one" >
+                                 <button type="submit"> Sign Up </button>
+                            </div>
+                        </form>
+                        <div class="end">
+                            <p class="signup-p">By signing up you accept our Terms of Use and Privacy Policy </p> 
+                         </div>
+                </div>
+                
+            </div>
+        </div>
+    
+
+    </div>
+    <script src="{{ STATIC_PREFIX }}/js/main.js" ></script>
+</body>
+</html>
