--- a/habitation/templates/pages/home.html
+++ b/habitation/templates/pages/home.html
@@ -36,7 +36,7 @@
                                 <li> <a href="#">Our Agents</a></li>
                                 <li> <a href="#">Contact Us</a></li>
                             </ul>
-                            {% if user.is_authenticated %}
+                            {% if not user.is_authenticated %}
                             <div class="form">                    
                                 <a href="{% url 'account_login' %}"><button> Login</button><a> 
                             </div>
