--- a/habitation/templates/ads/units.html
+++ b/habitation/templates/ads/units.html
@@ -34,7 +34,7 @@
        <div class="user form-inline">
        	  <a href="#"><i class="fa fa-bell fa-lg mr-5 mb-1" aria-hidden="true"></i></a>
        	  <img class=" img-icon rounded-circle" src="{{STATIC_PREFIX}}images/download.jpg">
-          <a href="#">Ahmed</a>
+          <a href="#">HI</a>
        </div>
     </nav>
 <!-- end header -->
