--- a/habitation/templates/ads/units-details.html
+++ b/habitation/templates/ads/units-details.html
@@ -58,7 +58,7 @@
             <div class="user d-flex justify-content-between align-items-center">
                 <a href="#"><i class="fa fa-bell fa-lg mr-5 mb-1 text-dark" aria-hidden="true"></i></a>
                 <img class=" img-icon rounded-circle w-25" src="{{ STATIC_PREFIX }}/images/download.jpg">
-             <a href="#" style="text-decoration: none; color: #333333;">Ahmed</a>
+             <a href="#" style="text-decoration: none; color: #333333;">HI</a>
           </div>
           </div>
         </div>
